--- a/man/rmd/linear_reg_gls.Rmd
+++ b/man/rmd/linear_reg_gls.Rmd
@@ -84,7 +84,7 @@ lme_fit <-
 
 The estimated within-subject correlations are the same:
 
-```{r}
+```{r, warning = FALSE}
 library(ape)
 
 # lme, use ape package:
