update model about model = TRUE for survival

--- a/man/rmd/survival_reg_survival.Rmd
+++ b/man/rmd/survival_reg_survival.Rmd
@@ -38,7 +38,7 @@ survival_reg(dist = character(1)) %>%
 
 ## Other details
 
-Note that `model = TRUE` is needed to produce quantile predictions when there is a stratification variable and can be overridden in other cases.
+In the translated syntax above, note that `model = TRUE` is needed to produce quantile predictions when there is a stratification variable and can be overridden in other cases.
 
 The main interface for this model uses the formula method since the model specification typically involved the use of [survival::Surv()]. 
 
