--- a/man/rmd/rule_fit_xrf.Rmd
+++ b/man/rmd/rule_fit_xrf.Rmd
@@ -75,8 +75,10 @@ use these with `rule_fit()`, we recommend using a recipe instead of the formula 
 
 Also, there are several configuration differences in how `xrf()` is fit between that package and the wrapper used in **rules**. Some differences in default values are:
 
-- `trees`: `xrf`: 100, `rules`: 15
-- `max_depth`: `xrf`: 3, `rules`: 6
+| parameter  | **xrf** | **rules** |
+|------------|---------|-----------|
+| `trees`    |  100    | 15        |
+|`max_depth` | 3       | 6         |
 
 
 These differences will create a disparity in the values of the `penalty` argument that **glmnet** uses. Also, **rules** can also set `penalty` whereas **xrf** uses an internal 5-fold cross-validation to determine it (by default).
