--- a/man/rmd/linear_reg_brulee.Rmd
+++ b/man/rmd/linear_reg_brulee.Rmd
@@ -7,8 +7,8 @@
 
 ```{r brulee-param-info, echo = FALSE}
 defaults <- 
-  tibble::tibble(parsnip = c("penalty"),
-                 default = c(  "0.001"))
+  tibble::tibble(parsnip = c("penalty", "mixture"),
+                 default = c(  "0.001", "0.0"))
 
 param <-
   linear_reg() %>% 
@@ -21,6 +21,8 @@ This model has `r nrow(param)` tuning parameter:
 ```{r brulee-param-list, echo = FALSE, results = "asis"}
 param$item
 ```
+
+The use of the L1 penalty (a.k.a. the lasso penalty) does _not_ force parameters to be strictly zero (as it does in packages such as glmnet). The zeroing out of parameters is a specific feature the optimization method used in those packages.
 
 Other engine arguments of interest: 
 
