--- a/man/rmd/multinom_reg_brulee.Rmd
+++ b/man/rmd/multinom_reg_brulee.Rmd
@@ -1,7 +1,7 @@
 ```{r, child = "aaa.Rmd", include = FALSE}
 ```
 
-`r descr_models("logistic_reg", "brulee")`
+`r descr_models("multinom_reg", "brulee")`
 
 ## Tuning Parameters
 
@@ -11,7 +11,7 @@ defaults <-
                  default = c(  "0.001", "0.0"))
 
 param <-
-  logistic_reg() %>% 
+  multinom_reg() %>% 
   set_engine("brulee") %>% 
   make_parameter_list(defaults)
 ```
@@ -32,13 +32,13 @@ Other engine arguments of interest:
  - `momentum()`: A number used to use historical gradient information during optimization  (`optimizer = "SGD"` only).
  - `batch_size()`: An integer for the number of training set points in each batch.
  - `stop_iter()`: A non-negative integer for how many iterations with no improvement before stopping. (default: 5L).
- - `class_weights()`: Numeric class weights. See [brulee::brulee_logistic_reg()].
+ - `class_weights()`: Numeric class weights. See [brulee::brulee_multinom_reg()].
 
 
 ## Translation from parsnip to the original package (classification)
 
 ```{r brulee-cls}
-logistic_reg(penalty = double(1)) %>% 
+multinom_reg(penalty = double(1)) %>% 
   set_engine("brulee") %>% 
   translate()
 ```
