Remove details on glmnet not using the formula interface

--- a/man/rmd/proportional_hazards_glmnet.Rmd
+++ b/man/rmd/proportional_hazards_glmnet.Rmd
@@ -52,9 +52,7 @@ By default, [glmnet::glmnet()] uses the argument `standardize = TRUE` to center 
 
 The model does not fit an intercept. 
 
-[glmnet::glmnet()] does not use the formula interface but, for consistency, this package requires a model formula. 
-
-The model formula can include _special_ terms, such as [survival::strata()]. This allows the baseline hazard to differ between groups contained in the function. The column used inside `strata()` is treated as qualitative no matter its type. This is different than the syntax offered by the [glmnet::glmnet()] package (i.e., [glmnet::stratifySurv()]) which is not recommended here. 
+The model formula (which is required) can include _special_ terms, such as [survival::strata()]. This allows the baseline hazard to differ between groups contained in the function. The column used inside `strata()` is treated as qualitative no matter its type. This is different than the syntax offered by the [glmnet::glmnet()] package (i.e., [glmnet::stratifySurv()]) which is not recommended here. 
 
 For example, in this model, the numeric column `rx` is used to estimate two different baseline hazards for each value of the column:
 
