use template for extra info on linear predictor

--- a/man/rmd/proportional_hazards_survival.Rmd
+++ b/man/rmd/proportional_hazards_survival.Rmd
@@ -44,14 +44,8 @@ Note that columns used in the `strata()` function will not be estimated in the r
 
 
 # Linear predictor values
-
-Since risk regression and parametric survival models are modeling different characteristics (e.g. relative hazard versus event time), their linear predictors will be going in opposite directions. 
-
-For example, for parametric models, the linear predictor _increases with time_. For proportional hazards models the linear predictor _decreases with time_ (since hazard is increasing). As such, the linear predictors for these two quantities will have opposite signs.
-
-tidymodels does not treat different models differently when computing performance metrics.  To standardize across model types, the default for proportional hazards models is to have _increasing values with time_. As a result, the sign of the linear predictor will be the opposite of the value produced by the `predict()` method in the \pkg{survival} package. 
-
-This behavior can be changed by using the `increasing` argument when calling `predict()` on a \pkg{parsnip} model object. 
+```{r child = "template-censored-linear-predictor.Rmd"}
+```
 
 ## References
 
