--- a/man/rmd/poisson_reg_gee.Rmd
+++ b/man/rmd/poisson_reg_gee.Rmd
@@ -63,8 +63,8 @@ gee_wflow <-
 
 fit(gee_wflow, data = longitudinal_counts)
 ```
-
-`gee()` always prints out warnings and output even when `silent = TRUE`. When using the `gee` engine, it will never produce output, even if `silent = FALSE`.
+```{r child = "template-gee-silent.Rmd"}
+```
 
 Also, because of issues with the `gee()` function, a supplementary call to `glm()` is needed to get the rank and QR decomposition objects so that `predict()` can be used.
 
