small doc update

--- a/man/rmd/discrim_linear_sda.Rmd
+++ b/man/rmd/discrim_linear_sda.Rmd
@@ -39,4 +39,4 @@ discrim_linear() %>%
 
 ## References
 
- - Ahdesmaki, A., and K. Strimmer. 2010. Feature selection in omics prediction problems using cat scores and false non-discovery rate control. Ann. Appl. Stat. 4: 503-519. [Preprint](http://arxiv.org/abs/0903.2003).
+ - Ahdesmaki, A., and K. Strimmer. 2010. Feature selection in omics prediction problems using cat scores and false non-discovery rate control. Ann. Appl. Stat. 4: 503-519. [Preprint](https://arxiv.org/abs/0903.2003).
