remove references to censored functions

--- a/man/rmd/boost_tree_mboost.Rmd
+++ b/man/rmd/boost_tree_mboost.Rmd
@@ -38,7 +38,7 @@ boost_tree() %>%
   translate()
 ```
 
-[blackboost_train()] is a wrapper around [mboost::blackboost()] (and other functions) that makes it easier to run this model. 
+`censored::blackboost_train()` is a wrapper around [mboost::blackboost()] (and other functions) that makes it easier to run this model. 
 
 ## Preprocessing requirements
 
