--- a/man/rmd/rand_forest_party.Rmd
+++ b/man/rmd/rand_forest_party.Rmd
@@ -36,7 +36,7 @@ rand_forest() %>%
   translate()
 ```
 
-[cond_inference_surv_cforest()] is a wrapper around [party::cforest()] (and other functions) that makes it easier to run this model. 
+`censored::cond_inference_surv_cforest()` is a wrapper around [party::cforest()] (and other functions) that makes it easier to run this model. 
 
 ## Preprocessing requirements
 
