--- a/vignettes/parsnip.Rmd
+++ b/vignettes/parsnip.Rmd
@@ -1,11 +1,13 @@
 ---
-title: "parsnip Basics"
+title: "Introduction to parsnip"
+output: rmarkdown::html_vignette
+description: |
+  The goal of parsnip is to provide a tidy, unified interface to models to avoid 
+  getting bogged down in the syntactical minutiae of the underlying software.
 vignette: >
   %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteIndexEntry{parsnip Basics}
-output:
-  knitr:::html_vignette:
-    toc: yes
+  %\VignetteIndexEntry{Introduction to parsnip}
+  %\VignetteEncoding{UTF-8}
 ---
 
 ```{r ex_setup, include=FALSE}
