--- a/man/rmd/pls_mixOmics.Rmd
+++ b/man/rmd/pls_mixOmics.Rmd
@@ -59,6 +59,20 @@ pls(num_comp = integer(1), predictor_prop = double(1)) %>%
 
 In this case, [plsmod::pls_fit()] has the same role as above but eventually targets [mixOmics::plsda()] or [mixOmics::splsda()] .
 
+## Installing mixOmics
+
+This package is available via the Bioconductor repository and is not accessible via CRAN. You can install using: 
+
+```{r eval = FALSE}
+  if (!require("BiocManager", quietly = TRUE)) {
+    install.packages("BiocManager")
+  }
+  
+  BiocManager::install("mixOmics")
+```
+
+
+
 ## Preprocessing requirements
 
 ```{r child = "template-makes-dummies.Rmd"}
