--- a/man/rmd/linear_reg_brulee.Rmd
+++ b/man/rmd/linear_reg_brulee.Rmd
@@ -51,6 +51,11 @@ linear_reg(penalty = double(1)) %>%
 ```{r child = "template-same-scale.Rmd"}
 ```
 
+## Case weights
+
+```{r child = "template-no-case-weights.Rmd"}
+```
+
 ## References
 
  - Kuhn, M, and K Johnson. 2013. _Applied Predictive Modeling_. Springer.
