--- a/man/rmd/discrim_flexible_earth.Rmd
+++ b/man/rmd/discrim_flexible_earth.Rmd
@@ -44,6 +44,10 @@ discrim_flexible(
 ```{r child = "template-makes-dummies.Rmd"}
 ```
 
+## Case weights
+
+```{r child = "template-uses-case-weights.Rmd"}
+```
 
 ## References
 
