added more notes in engine docs

--- a/man/rmd/discrim_linear_MASS.Rmd
+++ b/man/rmd/discrim_linear_MASS.Rmd
@@ -27,6 +27,11 @@ discrim_linear() %>%
 ```{r child = "template-zv.Rmd"}
 ```
 
+## Case weights
+
+```{r child = "template-no-case-weights.Rmd"}
+```
+
 ## References
 
  - Kuhn, M, and K Johnson. 2013. _Applied Predictive Modeling_. Springer.
