--- a/man/rmd/poisson_reg_gee.Rmd
+++ b/man/rmd/poisson_reg_gee.Rmd
@@ -26,9 +26,12 @@ poisson_reg(engine = "gee") %>%
 
 There are no specific preprocessing needs. However, it is helpful to keep the clustering/subject identifier column as factor or character (instead of making them into dummy variables). See the examples in the next section. 
 
-## Other details
+## Case weights
 
-The model cannot accept case weights. 
+```{r child = "template-no-case-weights.Rmd"}
+```
+
+## Other details
 
 Both `gee:gee()` and `gee:geepack()` specify the id/cluster variable using an argument `id` that requires a vector. parsnip doesn't work that way so we enable this model to be fit using a artificial function `id_var()` to be used in the formula. So, in the original package, the call would look like:
 
