--- a/man/rmd/discrim_quad_MASS.Rmd
+++ b/man/rmd/discrim_quad_MASS.Rmd
@@ -27,6 +27,11 @@ discrim_quad() %>%
 ```{r child = "template-zv-conditional.Rmd"}
 ```
 
+## Case weights
+
+```{r child = "template-no-case-weights.Rmd"}
+```
+
 ## References
 
  - Kuhn, M, and K Johnson. 2013. _Applied Predictive Modeling_. Springer.
