--- a/man/rmd/naive_Bayes_naivebayes.Rmd
+++ b/man/rmd/naive_Bayes_naivebayes.Rmd
@@ -23,6 +23,8 @@ This model has `r nrow(param)` tuning parameter:
 param$item
 ```
 
+Note that `usekernel` is always set to `TRUE` for the `naivebayes` engine.
+
 ## Translation from parsnip to the original package
 
 `r uses_extension("naive_Bayes", "naivebayes", "classification")`
