--- a/README.Rmd
+++ b/README.Rmd
@@ -50,7 +50,7 @@ One challenge with different modeling functions available in R _that do the same
 # From randomForest
 rf_1 <- randomForest(
   y ~ ., 
-  data = ., 
+  data = dat, 
   mtry = 10, 
   ntree = 2000, 
   importance = TRUE
