--- a/man/rmd/naive_Bayes_klaR.Rmd
+++ b/man/rmd/naive_Bayes_klaR.Rmd
@@ -23,7 +23,7 @@ This model has `r nrow(param)` tuning parameter:
 param$item
 ```
 
-Note that `usekernel` is always set to `TRUE` for the `klaR` engine.
+Note that the engine argument `usekernel` is set to `TRUE` by default when using the `klaR` engine. 
 
 ## Translation from parsnip to the original package
 
