add `?details_boost_tree_lightgbm` doc
also,
* re-knits rules xrf engine docs
* corrects link to bonsai pkgdown site

--- a/man/rmd/boost_tree_lightgbm.Rmd
+++ b/man/rmd/boost_tree_lightgbm.Rmd
@@ -80,8 +80,7 @@ bonsai quiets much of the logging output from [lightgbm::lgb.train()] by default
 
 ## Examples 
 
-<!-- TODO: update url to bonsai pkgdown site -->
-The "Introduction to bonsai" article contains [examples](https://github.com/tidymodels/bonsai) of `boost_tree()` with the `"lightgbm"` engine.
+The "Introduction to bonsai" article contains [examples](https://bonsai.tidymodels.org/articles/bonsai.html) of `boost_tree()` with the `"lightgbm"` engine.
 
 ## References
 
