make early stopping docs into a template, apply in `rule_fit_xrf.md`

--- a/man/rmd/boost_tree_xgboost.Rmd
+++ b/man/rmd/boost_tree_xgboost.Rmd
@@ -75,11 +75,8 @@ By default, the model is trained without parallel processing. This can be change
 
 ### Early stopping
 
-The `stop_iter()`  argument allows the model to prematurely stop training if the objective function does not improve within `early_stop` iterations. 
-
-The best way to use this feature is in conjunction with an _internal validation set_. To do this, pass the `validation` parameter of [xgb_train()] via the parsnip [set_engine()] function. This is the proportion of the training set that should be reserved for measuring performance (and stop early). 
-
-If the model specification has `early_stop >= trees`, `early_stop` is converted to `trees - 1` and a warning is issued. 
+```{r child = "template-early-stopping.Rmd"}
+```
 
 ### Objective function
 
