--- a/man/rmd/linear_reg_h2o.Rmd
+++ b/man/rmd/linear_reg_h2o.Rmd
@@ -1,8 +1,7 @@
 ```{r, child = "aaa.Rmd", include = FALSE}
 ```
 
-
-`r descr_models("logistic_reg", "h2o")`
+`r descr_models("linear_reg", "h2o")`
 
 ## Tuning Parameters
 
@@ -12,7 +11,7 @@ defaults <-
                  default = c("0", "see below"))
 
 param <-
-logistic_reg() %>% 
+linear_reg() %>% 
   set_engine("h2o") %>% 
   make_parameter_list(defaults)
 ```
@@ -27,27 +26,13 @@ By default h2o applies no regularization and `penalty` is set to zero. When the 
 
 ## Translation from parsnip to the original package
 
-`agua` uses the [agua::h2o_train_glm()] wrapper function for fitting the logistic regression model, which calls [h2o::h2o.glm()]. h2o will automatically picks the link function and distribution family or binomial responses. 
+The h2o engine uses `family = "gaussian"` in [h2o::h2o.glm()] to fit linear models. 
 
-```{r h2o-reg}
-logistic_reg() %>% 
+```{r h2o-csl}
+linear_reg(penalty = 1, mixture = 0.5) %>% 
   set_engine("h2o") %>% 
   translate()
 ```
-
-To use a non-default argument in [h2o::h2o.glm()], pass in as an engine argument to `set_engine()`:
-
-```{r h2o-reg-engine}
-logistic_reg() %>% 
-  set_engine("h2o", compute_p_values = TRUE) %>% 
-  translate()
-```
-
-Other h2o engine arguments of interest: 
-
-
-- `solver`: The solver method used in optimization, the default `"auto"` works well in most cases
-
 
 ## Preprocessing requirements
 
@@ -56,5 +41,5 @@ Other h2o engine arguments of interest:
 
 ```{r child = "template-same-scale.Rmd"}
 ```
+By default, [h2o::h2o.glm()] uses the argument `standardize = TRUE` to center and scale the data. 
 
-By default, [h2o::h2o.glm()] uses the argument `standardize = TRUE` to center and scale all numeric columns. 
