--- a/man/rmd/multinom_reg_h2o.Rmd
+++ b/man/rmd/multinom_reg_h2o.Rmd
@@ -1,8 +1,7 @@
 ```{r, child = "aaa.Rmd", include = FALSE}
 ```
 
-
-`r descr_models("logistic_reg", "h2o")`
+`r descr_models("multinom_reg", "h2o")`
 
 ## Tuning Parameters
 
@@ -12,7 +11,7 @@ defaults <-
                  default = c("0", "see below"))
 
 param <-
-logistic_reg() %>% 
+multinom_reg() %>% 
   set_engine("h2o") %>% 
   make_parameter_list(defaults)
 ```
@@ -27,19 +26,11 @@ By default [h2o::h2o.glm()] applies no regularization and `penalty` is set to ze
 
 ## Translation from parsnip to the original package
 
-[agua::h2o_train_glm()] for `logistic_reg()` is a wrapper around [h2o::h2o.glm()]. h2o will automatically picks the link function and distribution family or binomial responses. 
+[agua::h2o_train_glm()] for `multinom_reg()` is a wrapper around [h2o::h2o.glm()] with `family = 'multinomial'`. 
 
-```{r h2o-reg}
-logistic_reg() %>% 
+```{r h2o-cls}
+multinom_reg(penalty = double(1), mixture = double(1)) %>% 
   set_engine("h2o") %>% 
-  translate()
-```
-
-To use a non-default argument in [h2o::h2o.glm()], pass in as an engine argument to `set_engine()`:
-
-```{r h2o-reg-engine}
-logistic_reg() %>% 
-  set_engine("h2o", compute_p_values = TRUE) %>% 
   translate()
 ```
 
@@ -51,4 +42,5 @@ logistic_reg() %>%
 ```{r child = "template-same-scale.Rmd"}
 ```
 
-By default, [h2o::h2o.glm()] uses the argument `standardize = TRUE` to center and scale all numeric columns. 
+By default, [h2o::h2o.glm()] uses the argument `standardize = TRUE` to center and scale the data. 
+
