--- a/man/rmd/logistic_reg_h2o.Rmd
+++ b/man/rmd/logistic_reg_h2o.Rmd
@@ -9,7 +9,7 @@
 ```{r h2o-param-info, echo = FALSE}
 defaults <- 
   tibble::tibble(parsnip = c("penalty", "mixture"),
-                 default = c("0", "see below"))
+                 default = c("see below", "see below"))
 
 param <-
 logistic_reg() %>% 
@@ -23,7 +23,9 @@ This model has `r nrow(param)` tuning parameters:
 param$item
 ```
 
-By default [h2o::h2o.glm()] applies no regularization and `penalty` is set to zero. When the engine parameter `solver` is set to `'L-BFGS'`, `mixture` defaults to 0 (ridge regression) and 0.5 otherwise. 
+```{r, child = "template-h2o-glm-penalty.Rmd", include = FALSE}
+```
+
 
 ## Translation from parsnip to the original package
 
@@ -52,3 +54,9 @@ logistic_reg() %>%
 ```
 
 By default, [h2o::h2o.glm()] uses the argument `standardize = TRUE` to center and scale all numeric columns. 
+
+
+## Initializing h2o 
+
+```{r child = "template-h2o-init.Rmd"}
+```
